hphp/test/zend/bad/ns_043.php
<?php
namespace test\ns1;

const INI_ALL = 0;

var_dump(INI_ALL);